Criada a activity de login com um funcionamento basico, alem de algumas activities par auxiliar.

--- a/GameThis/AndroidManifest.xml
+++ b/GameThis/AndroidManifest.xml
@@ -22,6 +22,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".LoginActivity"
+            android:label="@string/title_activity_login" >
+        </activity>
+        <activity
+            android:name=".HomeActivity"
+            android:label="@string/title_activity_home" >
+        </activity>
+        <activity
+            android:name=".InscricaoActivity"
+            android:label="@string/title_activity_inscricao" >
+        </activity>
     </application>
 
 </manifest>
