--- a/GameThis/AndroidManifest.xml
+++ b/GameThis/AndroidManifest.xml
@@ -7,9 +7,9 @@
     <uses-sdk
         android:minSdkVersion="16"
         android:targetSdkVersion="16" />
-    
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -21,6 +21,7 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -36,9 +37,21 @@
             android:name=".ui.InscricaoActivity"
             android:label="@string/title_activity_inscricao" >
         </activity>
-		<activity
+        <activity
             android:name=".ui.MainActivity"
             android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".ui.NovoJogoActivity"
+            android:label="@string/title_activity_novo_jogo" >
+        </activity>
+        <activity
+            android:name=".ui.JogadoresActivity"
+            android:label="@string/title_activity_jogadores" >
+        </activity>
+        <activity
+            android:name=".ui.AtividadesActivity"
+            android:label="@string/title_activity_atividades" >
         </activity>
     </application>
 
