--- a/GameThis/AndroidManifest.xml
+++ b/GameThis/AndroidManifest.xml
@@ -10,6 +10,8 @@
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:allowBackup="true"
@@ -53,6 +55,11 @@
             android:name=".ui.AtividadesActivity"
             android:label="@string/title_activity_atividades" >
         </activity>
+        
+        <service android:name=".util.SincronizacaoService"
+                 android:enabled="true" />
+         
+        <receiver android:name=".util.SincronizacaoReceiver"/>
     </application>
 
 </manifest>
