--- a/GameThis/AndroidManifest.xml
+++ b/GameThis/AndroidManifest.xml
@@ -12,12 +12,23 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    <permission
+        android:name="br.com.recidev.gamethis.permission.C2D_MESSAGE"
+        android:protectionLevel="signature" />
+    <uses-permission android:name="br.com.recidev.gamethis.permission.C2D_MESSAGE" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/game_this_2"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
+       <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+        
         <activity
             android:name=".ui.SplashScreen"
             android:label="@string/app_name" >
@@ -60,6 +71,20 @@
                  android:enabled="true" />
          
         <receiver android:name=".util.SincronizacaoReceiver"/>
+        
+        
+        <receiver
+            android:name="br.com.recidev.gamethis.util.GcmBroadcastReceiver"
+            android:permission="com.google.android.c2dm.permission.SEND">
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                <category android:name="br.com.recidev.gamethis" />
+            </intent-filter>
+        </receiver>
+
+        <service android:name="br.com.recidev.gamethis.util.GcmIntentService" />
+
+        
     </application>
 
 </manifest>
