--- a/GameThis/AndroidManifest.xml
+++ b/GameThis/AndroidManifest.xml
@@ -14,9 +14,11 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+
     <permission
         android:name="br.com.recidev.gamethis.permission.C2D_MESSAGE"
         android:protectionLevel="signature" />
+
     <uses-permission android:name="br.com.recidev.gamethis.permission.C2D_MESSAGE" />
 
     <application
@@ -24,11 +26,10 @@
         android:icon="@drawable/game_this_2"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        
-       <meta-data
+        <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
-        
+
         <activity
             android:name=".ui.SplashScreen"
             android:label="@string/app_name" >
@@ -58,32 +59,51 @@
             android:name=".ui.NovoJogoActivity"
             android:label="@string/title_activity_novo_jogo" >
         </activity>
+        
+        
         <activity
-            android:name=".ui.JogadoresActivity"
-            android:label="@string/title_activity_jogadores" >
+            android:name=".ui.JogadoresActivity" >
+            
+            <meta-data
+                android:name="android.app.default_searchable"
+                android:value=".ui.SearchResultsJogadoresActivity" />
+            
         </activity>
+        
+        <activity android:name=".ui.SearchResultsJogadoresActivity" >
+		    <intent-filter>
+		        <action android:name="android.intent.action.SEARCH" />
+		    </intent-filter>
+		    
+		    <meta-data android:name="android.app.searchable"
+            android:resource="@xml/searchable_jogadores" />
+		</activity>
+        
+        
+        
         <activity
             android:name=".ui.AtividadesActivity"
             android:label="@string/title_activity_atividades" >
         </activity>
-        
-        <service android:name=".util.SincronizacaoService"
-                 android:enabled="true" />
-         
-        <receiver android:name=".util.SincronizacaoReceiver"/>
-        
-        
+
+        <service
+            android:name=".util.SincronizacaoService"
+            android:enabled="true" />
+
+        <receiver android:name=".util.SincronizacaoReceiver" />
         <receiver
-            android:name="br.com.recidev.gamethis.util.GcmBroadcastReceiver"
-            android:permission="com.google.android.c2dm.permission.SEND">
+            android:name=".util.GcmBroadcastReceiver"
+            android:permission="com.google.android.c2dm.permission.SEND" >
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+
                 <category android:name="br.com.recidev.gamethis" />
             </intent-filter>
         </receiver>
 
-        <service android:name="br.com.recidev.gamethis.util.GcmIntentService" />
+        <service android:name=".util.GcmIntentService" />
 
+        
         
     </application>
 
