--- a/GameThis/AndroidManifest.xml
+++ b/GameThis/AndroidManifest.xml
@@ -123,6 +123,10 @@
             android:name=".ui.DetalhesAtividadeConvidadoActivity"
             android:label="@string/title_activity_detalhes_atividade_convidado" >
         </activity>
+        <activity
+            android:name=".ui.RankingActivity"
+            android:label="@string/title_activity_ranking" >
+        </activity>
     </application>
 
 </manifest>
